--- a/index_old.html
+++ b/index_old.html
@@ -243,15 +243,13 @@
         </div>
       </div>
     </div>
-
-        <div class="blog-item">
-          <div  class="align-center">
-            <a href="review.html">Читать все отзывы</a>
-          </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="titie-section wow fadeInDown animated ">
+          <h1><a href="review.html">Читать все отзывы</a></h1>
         </div>
-
-
-
+      </div>
+    </div>
   </section>
 
   <section class="news-section">
