--- a/polza_tmina.html
+++ b/polza_tmina.html
@@ -38,7 +38,6 @@
   <header class="header-section">
     <nav class="navbar navbar-default">
       <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Меню</span>
@@ -49,7 +48,6 @@
           <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Магазин</a></li>
@@ -60,10 +58,9 @@
             <li><a href="contact.html">Контакты</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right cart-menu">
-            <!--<li><a href="#"><span> Корзина &nbsp;</span> <span class="shoping-cart">0</span></a></li>-->
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
+        </div>
+      </div>
     </nav>
   </header>
 
