--- a/basket.html
+++ b/basket.html
@@ -94,7 +94,7 @@
           <img src="images/mini1.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
         </div>
         <div class="col-sm-4">
-          <h3><b>Масло черного тмина 100 мл. (<s>19р</s> 16р)</b></h3>
+          <h3><b>Масло черного тмина 100 мл. (19р)</b></h3>
         </div>
         <div class="col-sm-4">
           <div class="input-group">
@@ -110,7 +110,7 @@
           <img src="images/mini2.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
         </div>
         <div class="col-sm-4">
-          <h3><b>Масло черного тмина 250 мл. (<s>46р</s> 39р)</b></h3>
+          <h3><b>Масло черного тмина 250 мл. (46р)</b></h3>
         </div>
         <div class="col-sm-4">
           <div class="input-group">
@@ -126,7 +126,7 @@
           <img src="images/mini3.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
         </div>
         <div class="col-sm-4">
-          <h3><b>Масло черного тмина 500 мл. (<s>86р</s> 78р)</b></h3>
+          <h3><b>Масло черного тмина 500 мл. (86р)</b></h3>
         </div>
         <div class="col-sm-4">
           <div class="input-group">
