--- a/basket.html
+++ b/basket.html
@@ -68,122 +68,8 @@
   <div class="container">
 
     <div class="col-sm-12">
-      <h3>Для оформления заказа введите количество нужного товара. Заполните необходимые поля для доставки по почте. Мы перезвоним на указанный номер, для уточнения деталей доставки. Спасибо за покупку! <br><br><br> </h3>
+      <h3>Для уточнение цены и способах доставки оставьте номер телефона. Мы свяжемся с вами и проконсультируем.</h3>
     </div>
-
-    <form action="send_basket.php" method="post" class="basket-form">
-
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="images/mini4.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
-        </div>
-        <div class="col-sm-4">
-          <h3><b>Семена черного тмина 100 гр. (5р)</b></h3>
-        </div>
-        <div class="col-sm-4">
-          <div class="input-group">
-            <br>
-            <input type="text" class="form-control" name="gr100" placeholder="0">
-            <br><br><br>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="images/mini1.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
-        </div>
-        <div class="col-sm-4">
-          <h3><b>Масло черного тмина 100 мл. (19р)</b></h3>
-        </div>
-        <div class="col-sm-4">
-          <div class="input-group">
-            <br>
-            <input type="text" class="form-control" name="ml100" placeholder="0">
-            <br><br><br>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="images/mini2.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
-        </div>
-        <div class="col-sm-4">
-          <h3><b>Масло черного тмина 250 мл. (46р)</b></h3>
-        </div>
-        <div class="col-sm-4">
-          <div class="input-group">
-            <br>
-            <input type="text" class="form-control" name="ml250" placeholder="0">
-            <br><br><br>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="images/mini3.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
-        </div>
-        <div class="col-sm-4">
-          <h3><b>Масло черного тмина 500 мл. (86р)</b></h3>
-        </div>
-        <div class="col-sm-4">
-          <div class="input-group">
-            <br>
-            <input type="text" class="form-control" name="ml500" placeholder="0">
-            <br><br><br>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-12">
-        <br>
-        <h3>Обратите внимание, что услуги почты платные. На наши товары ориентировочная стоимость доставки почтой - 4р. <br> Внимательно и полностью заполните следующие поля:  <br><br><br> </h3>
-      </div>
-
-
-      <div class="row">
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="index" placeholder="Индекс" required>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="oblast" placeholder="Область" required>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="city" placeholder="Город" required>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="street" placeholder="Улица" required>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="d" placeholder="Дом" required>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="kv" placeholder="Квартира" required>
-          </div>
-        </div>
-      </div>
 
       <div class="row">
         <div class="col-md-4">
@@ -195,20 +81,20 @@
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
-            <input type="text" class="form-control" name="name1" placeholder="Фамилия" required>
+            <input type="text" class="form-control" name="name" placeholder="Имя" required>
           </div>
         </div>
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
-            <input type="text" class="form-control" name="name2" placeholder="Имя, отчество" required>
+            <input type="text" class="form-control" name="time" placeholder="Удобное время" required>
           </div>
         </div>
       </div>
 
       <div class="col-sm-12">
         <br><br>
-        <h3>Нажимая "Отправить заказ", вы соглашаетесь с <a href="pol.pdf" target="_blank">политикой обработки персональных данных.</a> </h3>
+        <h3>Нажимая "Заказать звонок", вы соглашаетесь с <a href="pol.pdf" target="_blank">политикой обработки персональных данных.</a> </h3>
       </div>
 
 
@@ -217,7 +103,7 @@
         <div class="col-md-12">
           <div>
             <br><br>
-            <input type="submit" class="basket-contact-submit" value="Отправить заказ" />
+            <input type="submit" class="basket-contact-submit" value="Заказать звонок" />
           </div>
         </div>
       </div>
