--- a/basket.html
+++ b/basket.html
@@ -4,9 +4,8 @@
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Корзина</title>
-  <meta name="description" content="Форма заказа продуктов из черного тмина. Доставка по почте по всей Беларуси. Выбрать объем и количество
-  масла тмина. Отправить заказ">
+  <title>Заказ</title>
+  <meta name="description" content="Форма заказа продуктов из черного тмина">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
@@ -68,7 +67,7 @@
   <div class="container">
 
     <div class="col-sm-12">
-      <h3>Для уточнение цены и способах доставки оставьте номер телефона. Мы свяжемся с вами и проконсультируем.</h3>
+      <h3>Для уточнение цены и способах доставки оставьте номер телефона. <br>Мы свяжемся с вами и проконсультируем. <br>Либо позвоните нам <br>8 029 127 92 71</h3>
     </div>
 
     <form action="send_basket.php" method="post" class="basket-form">
