--- a/basket.html
+++ b/basket.html
@@ -4,9 +4,8 @@
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Корзина</title>
-  <meta name="description" content="Форма заказа продуктов из черного тмина. Доставка по почте по всей Беларуси. Выбрать объем и количество
-  масла тмина. Отправить заказ">
+  <title>Заказ</title>
+  <meta name="description" content="Форма заказа продуктов из черного тмина">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
@@ -68,125 +67,13 @@
   <div class="container">
 
     <div class="col-sm-12">
-      <h3>Для оформления заказа введите количество нужного товара. Заполните необходимые поля для доставки по почте. Мы перезвоним на указанный номер, для уточнения деталей доставки. Спасибо за покупку! <br><br><br> </h3>
+      <h3>Для уточнение цены и способах доставки оставьте номер телефона. <br>Мы свяжемся с вами и проконсультируем. <br>Либо позвоните нам <br>8 029 127 92 71</h3>
     </div>
 
     <form action="send_basket.php" method="post" class="basket-form">
 
       <div class="row">
-        <div class="col-sm-4">
-          <img src="images/mini4.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
-        </div>
-        <div class="col-sm-4">
-          <h3><b>Семена черного тмина 100 гр. (5р)</b></h3>
-        </div>
-        <div class="col-sm-4">
-          <div class="input-group">
-            <br>
-            <input type="text" class="form-control" name="gr100" placeholder="0">
-            <br><br><br>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="images/mini1.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
-        </div>
-        <div class="col-sm-4">
-          <h3><b>Масло черного тмина 100 мл. (19р)</b></h3>
-        </div>
-        <div class="col-sm-4">
-          <div class="input-group">
-            <br>
-            <input type="text" class="form-control" name="ml100" placeholder="0">
-            <br><br><br>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="images/mini2.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
-        </div>
-        <div class="col-sm-4">
-          <h3><b>Масло черного тмина 250 мл. (46р)</b></h3>
-        </div>
-        <div class="col-sm-4">
-          <div class="input-group">
-            <br>
-            <input type="text" class="form-control" name="ml250" placeholder="0">
-            <br><br><br>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="images/mini3.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
-        </div>
-        <div class="col-sm-4">
-          <h3><b>Масло черного тмина 500 мл. (86р)</b></h3>
-        </div>
-        <div class="col-sm-4">
-          <div class="input-group">
-            <br>
-            <input type="text" class="form-control" name="ml500" placeholder="0">
-            <br><br><br>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-12">
-        <br>
-        <h3>Обратите внимание, что услуги почты платные. На наши товары ориентировочная стоимость доставки почтой - 4р. <br> Внимательно и полностью заполните следующие поля:  <br><br><br> </h3>
-      </div>
-
-
-      <div class="row">
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="index" placeholder="Индекс" required>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="oblast" placeholder="Область" required>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="city" placeholder="Город" required>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="street" placeholder="Улица" required>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="d" placeholder="Дом" required>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="kv" placeholder="Квартира" required>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="input-group">
             <br><br>
             <input type="text" class="form-control" name="phone" placeholder="Телефон" required>
@@ -195,44 +82,34 @@
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
-            <input type="text" class="form-control" name="name1" placeholder="Фамилия" required>
+            <input type="text" class="form-control" name="name" placeholder="Имя" required>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
-            <input type="text" class="form-control" name="name2" placeholder="Имя, отчество" required>
+            <input type="text" class="form-control" name="time" placeholder="Удобное время" required>
           </div>
         </div>
       </div>
 
       <div class="col-sm-12">
         <br><br>
-        <h3>Нажимая "Отправить заказ", вы соглашаетесь с <a href="pol.pdf" target="_blank">политикой обработки персональных данных.</a> </h3>
+        <h3>Нажимая "Заказать звонок", вы соглашаетесь с <a href="pol.pdf" target="_blank">политикой обработки персональных данных.</a> </h3>
       </div>
-
-
 
       <div class="align-center">
         <div class="col-md-12">
           <div>
             <br><br>
-            <input type="submit" class="basket-contact-submit" value="Отправить заказ" />
+            <input type="submit" class="basket-contact-submit" value="Заказать звонок" />
           </div>
         </div>
       </div>
 
-      <br><br><br><br><br><br>
 
     </form>
-
-    <form action="send.php" method="post" class="basket-form">
-
-
-      <br><br><br><br>
-    </form>
-
-
+    <br><br><br><br><br><br><br><br><br><br><br><br>
   </div>
 
 
